load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "mtk-uart-apdma",
    srcs = [
        "mtk-uart-apdma.c",
    ],
    copts = ["-I$(srctree)/drivers/dma/mediatek"],
)

define_mgk_ddk_ko(
    name = "mtk-cqdma",
    srcs = [
        "mtk-cqdma.c",
    ],
    copts = ["-I$(srctree)/drivers/dma/mediatek"],
)