load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

ddk_headers(
     name = "apdma_headers",
     hdrs = glob([
        "mtk-uart-apdma.h",
    ]),
    includes = ["."],
)

define_mgk_ddk_ko(
    name = "mtk-uart-apdma",
    srcs = [
        "mtk-uart-apdma.c",
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/sda:irq-dbg".format(kernel_version),
    ],
    copts = ["-I$(srctree)/drivers/dma/mediatek"],
)

define_mgk_ddk_ko(
    name = "mtk-cqdma",
    srcs = [
        "mtk-cqdma.c",
    ],
    copts = ["-I$(srctree)/drivers/dma/mediatek"],
)
