load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "makefiles",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h"
    ]),
)

define_mgk_ddk_ko(
    name = "mtk_edac_slc",
    srcs = [
        "mtk_edac_slc.c",
    ],
    includes = ["."],
    copts = [
        "-I$(srctree)/drivers/edac",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/"
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/aee/aed:aee_aed".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/aee/mrdump:mrdump".format(kernel_version),
    ],
)
