load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

MODULE_NAME = [
    "mt635x-auxadc",
    "mt6360-adc",
    "mt6370-adc",
    "mt6375-adc",
    "mt6375-auxadc",
    "mt6379-adc",
    "mtk-spmi-pmic-adc",
    "rt9490-adc",
]

[define_mgk_ddk_ko(
    name = "{}".format(mod),
    srcs = [
        "{}.c".format(mod),
    ],
    includes = ["."],
) for mod in MODULE_NAME]
